# english_to_iql_demo

./: .gitignore  README.md  interpreter_metadata.pkl  lpm_parameters.json  mixture_model.dill  package-lock.json  pyproject.toml  schema.json  spec.py  tailwind.config.js  us_lpm.json  us_lpm_grammar.lark
english_to_iql_demo/: clojure_interaction.py  english_to_iql.py  grammar.py  inferenql_api.py  main.py  plot.py  pre_prompt.py  run_query.py
genfact_demo/: main.py
grammars/: make_grammar.py  tiny_iql.lark  us_lpm_cols.lark  us_lpm_geo.lark  us_lpm_prob.lark
results/: iql_out.csv
src/: base.html.jinja  genfact-index.html.jinja  genfact.html.jinja  index.html.jinja  output.css  query1_lpm_demo.html.jinja  query2_lpm_demo.html.jinja  row_result_lpm_demo.html.jinja
tests/: test_english_to_iql.py  test_run_iql.py
