[tool.poetry]
name = "genfact-demo"
version = "0.1.0"
description = ""
authors = ["joao loula <jloula@mit.edu>", "Matthew Davidson <matthew@modulolotus.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pytest = "^8.2.2"
ipdb = "^0.13.13"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
jinja2 = "^3.1.2"
jinja2-fragments = "^1.1.0"
python-multipart = "^0.0.6"
pytailwindcss = "^0.2.0"
black = "^23.9.1"
requests = "^2.32.3"
pyarrow = "^16.1.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
