[tool.poetry]
name = "english-to-iql-demo"
version = "0.1.0"
description = ""
authors = ["João Loula <jloula@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
genjax = {version = "^0.6.1", source = "gcp"}
jax-multimix = {git = "https://github.com/probcomp/jax_multimix.git", rev = "sample_condition_variables"}
altair = "^5.4.1"
pyarrow = "^17.0.0"
lark = "^1.2.2"
vegafusion = {extras = ["embed"], version = "^1.6.9"}
geopandas = "^1.0.1"
pyogrio = "^0.9.0"
chat-demo = {git = "https://github.com/probcomp/chat_demo_server.git"}


[[tool.poetry.source]]
name = "gcp"
url = "https://us-west1-python.pkg.dev/probcomp-caliban/probcomp/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
